# Hackathon

./: README.md
A-Modular-Kingdom/: .gitignore  GLOBAL_RULES.md  README.md  pyproject.toml
A-Modular-Kingdom/agent/: host.py  main.py
A-Modular-Kingdom/memory/: core.py
A-Modular-Kingdom/rag/: core_3.py  fetch.py  fetch_2.py  fetch_3.py
emotion_detection/: label_encoder.joblib  train_and_save.py
src/: agent_system.py  gemma_loader.py  main_app.py
