[project]
name = "a-modular-kingdom"
version = "0.1.0"
description = "A modular agentic kingdom with memory, RAG, and web search"
dependencies = [
    "mcp",
    "fastmcp",
    "ollama",
    "mem0ai",
    "chromadb",
    "nest-asyncio",
    "pymupdf>=1.26.3",
    "sentence-transformers>=5.0.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "faiss-cpu>=1.11.0.post1",
    "beautifulsoup4>=4.13.4",
    "httpx>=0.28.1",
    "rank-bm25",
    "prompt-toolkit",
    "langchain-huggingface",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent", "memory", "rag", "tools"]
